[project]
name = "repl-nix-wordhuntreimagined"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.0.3",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "urllib3>=2.2.3",
    "flask-socketio>=5.4.1",
    "eventlet>=0.37.0",
    "python-socketio>=5.11.4",
]
